Updated Index Page
Updated Index Page to add the logo, change the footer color to the logo and to edit the different sizes it would appear on different devices

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,11 @@
 
 .footer{
     padding: 1%;
-    background-color: black;
-    color: white;
+    background-color: rgb(186, 203, 186);
+    color: rgb(27, 35, 43);
     font-family: 'Roboto'; 
+}
+
+#footer_logo {
+    width:40%;
 }
