--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,11 @@
     border-top: 2px solid white;
 }
 
+#centre_heading{
+    text-align: center;
+    font-family: 'pacifico';
+}
+
 .footer{
     padding: 1%;
     background-color: rgb(186, 203, 186);
