Updated Index Page
Updated Index Page which now has a carousel and the images are all aligned to the center

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,10 @@
     font-family: 'pacifico';
 }
 
+.carousel-inner{
+    text-align: center;
+}
+
 .footer{
     padding: 1%;
     background-color: rgb(186, 203, 186);
