--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,11 @@
     background-color: rgba(0, 0, 0, 0.6);
 }
 
+.carousel-caption{
+    background-color: rgba(0, 0, 0, 0.5);
+    font-family: 'KoHo:wght@300';
+}
+
 .footer{
     padding: 1%;
     background-color: rgb(186, 203, 186);
