--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,12 @@
 
 .row{ margin-left: 0; margin-right: 0;}
 
+.card{
+    width: 400px;
+    font-family: 'roboto';
+    text-align: center;
+}
+
 .carousel-caption{
     background-color: rgba(0, 0, 0, 0.5);
     font-family: 'KoHo:wght@300';
