--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,13 @@
     text-align: center;
 }
 
+
+.card-img-top-2{
+    height: 200px;
+    width: 100px;
+    align-items: center;
+}
+
 .carousel-caption{
     background-color: rgba(0, 0, 0, 0.5);
     font-family: 'KoHo:wght@300';
